--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(brapi_canInternet)
 export(brapi_checkCon)
 export(brapi_connect)
 export(brapi_db)
+export(brapi_get_allelematrix)
 export(brapi_get_attributes)
 export(brapi_get_attributevalues)
 export(brapi_get_calls)
