Post search allelematrix and get search allelematrix searchResultsDbId calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(brapi_post_people)
 export(brapi_post_programs)
 export(brapi_post_samples)
 export(brapi_post_scales)
+export(brapi_post_search_allelematrix)
 export(brapi_post_search_attributes)
 export(brapi_post_search_attributevalues)
 export(brapi_post_search_calls)
