--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(brapi_get_samples)
 export(brapi_get_samples_sampleDbId)
 export(brapi_get_scales)
 export(brapi_get_scales_scaleDbId)
+export(brapi_get_search_allelematrix_searchResultsDbId)
 export(brapi_get_search_attributes_searchResultsDbId)
 export(brapi_get_search_attributevalues_searchResultsDbId)
 export(brapi_get_search_calls_searchResultsDbId)
